project1/css/style.css
.clearfix:before,
.clearfix:after {
  content: " ";
  display:table;
}
.clearfix:after{
  clear: both;
}

body {
  height: 100%;
  width: 100%;
  position: relative;
  /*background: "white";*/
}
.healthbar {
  width: 300px;
  height: 10px;
  position: relative;
  border: 1px solid black;
  background: yellow;

}

.board {
  width: 600px;
  height: 600px;
  position: relative;
  display: flex;
  flex-wrap: wrap;
  align-content: space-around;
  border: 2px solid black;
  /*background: "white";*/
}

.box {
  height: 10px;
  width: 10px;
  border-radius: 8px;
  position: relative;
  z-index: -100;
  background: red;
/*  border: 1px black solid;*/
}

.player {
  height: 20px;
  width: 20px;
  position: absolute;
  left: 0px;
  /*top: 0px;*/
  z-index: 1;
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
  background-image: url('../assets/ship.png');

}

.background {
  background-image: url('../assets/background.png');
  background-repeat: repeat;
  width: 800px;
  height: 600px;
}

header{
  font-family: 'Open Sans', sans-serif;
  margin: -60px 0px -40px 0px;
}

h1 {
  font-size: 68px;
  font-weight: bold;

}

.mainflex {
  display: flex;
  align-items: center;
  flex-direction: column;
}

.bodyflex {
  display: flex;
  align-items: center;
  justify-content: center;
}

.bgcolor {
  background: #333;
  color: #fff;
}

.button-box {
  height: 90px;
  width: 400px;
  border: 4px solid white;
  border-radius: 10px;
  text-align: center;
  margin-bottom: 50px;
  background: rgb(85, 85, 85);
/*  display: flex;
  flex-direction: column;
  align-items: center;*/
}

h2 {
  margin-bottom: 20px;
  position: relative;
  bottom: 20px;
  font-size: 26px;
  font-family: 'Open Sans', sans-serif;
}

a {
  text-decoration: none;
}

h5 {
  margin: 2px;
}
.button {
  height: 35px;
  width: 380px;
  margin: 0 auto;
  background: rgb(166, 222, 110);
  position: relative;
  border-radius: 10px;
  text-align: center;
  bottom: 30px;
}

p {
  font-size: 18px;
  font-family: 'Open Sans', sans-serif;
  color: #333;
  position: relative;
  margin: auto;
  top: 5px;
}


.projectile {
  height: 3px;
  width: 3px;
  background: black;
  border-radius: 50%;
  z-index: 10000;
  position: absolute;

}

.enemy {
  height: 15px;
  width: 15px;
  position: absolute;

}

